# opencv_examples_cpp

./: README.md
src/: CMakeLists.txt  README.md  path.h
src/CH1/: CMakeLists.txt  blur.cpp  canny.cpp  color.cpp  gaussianblur.cpp  open.cpp  resize.cpp  show.cpp  videocapture.cpp  videocapturecanny.cpp
src/CH1/00_show/: CMakeLists.txt  show.cpp
src/CH1/01_blur/: CMakeLists.txt  blur.cpp
src/CH1/02_canny/: CMakeLists.txt  canny.cpp
src/CH1/03_resize/: CMakeLists.txt  resize.cpp
src/CH1/04_color/: CMakeLists.txt  color.cpp
src/CH1/05_GaussianBlur/: CMakeLists.txt  gaussianblur.cpp
src/CH1/06_VideoOpen/: CMakeLists.txt  open.cpp
src/CH1/07_VideoCapture/: CMakeLists.txt  videocapture.cpp
src/CH1/08_VideoCaptureCanny/: CMakeLists.txt  videocapturecanny.cpp
src/CH2/: CMakeLists.txt  objectdetect.cpp  objecttrace.cpp  pointtrace.cpp
src/CH2/01_ObjectTrace/: CMakeLists.txt  objecttrace.cpp
src/CH2/02_ObjectDetect/: CMakeLists.txt  objectdetect.cpp
src/CH2/03_PointTrace/: CMakeLists.txt  pointtrace.cpp
src/CH3/: CMakeLists.txt  alphamat.cpp  show.cpp  trackbar.cpp
src/CH3/01_imshow/: CMakeLists.txt  show.cpp
src/CH3/02_CreateMat/: CMakeLists.txt  create.cpp
src/CH3/03_mouse/: CMakeLists.txt  mouse.cpp
src/CH3/04_trackbar/: CMakeLists.txt  trackbar.cpp
src/CH4/: CMakeLists.txt  mat.cpp
src/CH4/01_draw/: CMakeLists.txt  draw.cpp
src/CH4/02_mat/: CMakeLists.txt
src/CH5/: CMakeLists.txt  DFT.cpp  accessPixel.cpp  accessPixel2.cpp  accessPixel3.cpp  accessPixeln.cpp  blendMultichannel.cpp  bright.cpp  xml.cpp
src/CH5/1_accessPixel/: CMakeLists.txt  accessPixel.cpp
src/CH5/2_accessPixel2/: CMakeLists.txt  accessPixel2.cpp
src/CH5/3_accessPixel3/: CMakeLists.txt  accessPixel3.cpp
src/CH5/4_accessPixeln/: CMakeLists.txt  accessPixeln.cpp
src/CH5/5_blend/: CMakeLists.txt  blend.cpp
src/CH5/6_blendMultichannel/: CMakeLists.txt
src/CH5/7_bright/: CMakeLists.txt  bright.cpp
src/CH5/8_DFT/: CMakeLists.txt
src/CH5/9_xml/: CMakeLists.txt
src/CH6/: CMakeLists.txt  README.md
src/CH6/10_DilateErode/: CMakeLists.txt  dilate_erode.cpp
src/CH6/11_DilationEX/: CMakeLists.txt  DilationEX.cpp
src/CH6/12_ErodeEX/: CMakeLists.txt  ErodeEX.cpp
src/CH6/13_OpenEx/: CMakeLists.txt  OpenEx.cpp
src/CH6/14_ClosingEx/: CMakeLists.txt  Closing.cpp
src/CH6/15_GradientEX/: CMakeLists.txt  Gradient.cpp
src/CH6/16_TopHatEX/: CMakeLists.txt  TopHat.cpp
src/CH6/17_BlackHatEX/: BlackHat.cpp  CMakeLists.txt
src/CH6/18_MorphologyEX/: CMakeLists.txt  Morphology.cpp
src/CH6/19_FloodFill/: CMakeLists.txt  floodFill.cpp
src/CH6/1_boxFilter/: CMakeLists.txt  boxFilter.cpp
src/CH6/20_FloodFill2/: CMakeLists.txt  floodFill2.cpp
src/CH6/21_resize/: CMakeLists.txt  resize.cpp
src/CH6/22_pyrUp/: CMakeLists.txt  pyrUp.cpp
src/CH6/23_pyrDown/: CMakeLists.txt  pyrDown.cpp
src/CH6/24_PyrAndResize/: CMakeLists.txt  PyrAndResize.cpp
src/CH6/25_ThresHold/: CMakeLists.txt  threshold.cpp
src/CH6/2_blur/: CMakeLists.txt  blur.cpp
src/CH6/3_gaussianBlur/: CMakeLists.txt  GaussianBlur.cpp
src/CH6/4_LinearFilter/: CMakeLists.txt  LinearFilter.cpp
src/CH6/5_MedianBlur/: CMakeLists.txt  medianBlur.cpp
src/CH6/6_BilateralFilter/: BilateralFilter.cpp  CMakeLists.txt
src/CH6/7_ImageFilter/: CMakeLists.txt  ImageFilter.cpp
src/CH6/8_Dilate/: CMakeLists.txt  dilate.cpp
src/CH6/9_Erode/: CMakeLists.txt  erode.cpp
src/CH7/: CMakeLists.txt  README.md
src/CH7/10_CircleCheck/: CMakeLists.txt  circleCheck.cpp
src/CH7/11_HoughLineTotal/: CMakeLists.txt  HoughLines.cpp
src/CH7/12_remap/: CMakeLists.txt  remap.cpp
src/CH7/13_remap2/: CMakeLists.txt  remap2.cpp
src/CH7/14_AffineTransform/: AffineTransform.cpp  CMakeLists.txt
src/CH7/1_Canny/: CMakeLists.txt  canny.cpp
src/CH7/2_sobel/: CMakeLists.txt  sobel.cpp
src/CH7/3_Laplacian/: CMakeLists.txt  Laplacian.cpp
src/CH7/4_Scharr/: CMakeLists.txt  Scharr.cpp
src/CH7/5_EdgeDetection/: CMakeLists.txt  EdgeDetection.cpp
src/CH7/6_HoughLines/: CMakeLists.txt  HoughLines.cpp
src/CH7/7_HoughLinesP/: CMakeLists.txt  HoughLinesP.cpp
src/CH7/8_EqualizeHist/: CMakeLists.txt  equalizeHist.cpp
src/CH7/9_HoughCircles/: CMakeLists.txt  HoughCircles.cpp
src/CH8/: CMakeLists.txt  README.md
src/CH8/10_inpaint/: CMakeLists.txt  inpaint.cpp
src/CH8/1_findContours/: CMakeLists.txt  findContours.cpp
src/CH8/2_FindAndDrawContours/: CMakeLists.txt  FindAndDrawContours.cpp
src/CH8/3_convexHull/: CMakeLists.txt  convexHull.cpp
src/CH8/4_convexHull2/: CMakeLists.txt  convexHull2.cpp
src/CH8/5_minAreaRect/: CMakeLists.txt  minAreaRect.cpp
src/CH8/6_minEnclosingCircle/: CMakeLists.txt  minEnclosingCircle.cpp
src/CH8/7_approxPolyDP/: CMakeLists.txt  approxPolyDP.cpp
src/CH8/8_ContourMoment/: CMakeLists.txt  ContourMoment.cpp
src/CH8/9_watershed/: CMakeLists.txt  watershed.cpp
src/CH9/: CMakeLists.txt  README.md
src/CH9/1_H-S-Histogram/: CMakeLists.txt  H-S-Histogram.cpp
src/CH9/2_Histogram2/: CMakeLists.txt  Histogram2.cpp
src/CH9/3_histogram3/: CMakeLists.txt  histogram3.cpp
src/CH9/4_compareHist/: CMakeLists.txt  compareHist.cpp
src/CH9/5_calcBackProject/: CMakeLists.txt  calcBackProject.cpp
src/CH9/6_matchTemplate/: CMakeLists.txt  matchTemplate.cpp
src/CH_10/: CMakeLists.txt  README.md
src/CH_10/1_cornerHarris/: CMakeLists.txt  cornerHarris.cpp
src/CH_10/2_cornerHarris2/: CMakeLists.txt  cornerHarris2.cpp
src/CH_10/3_goodFeaturesToTrack/: CMakeLists.txt  goodFeaturesToTrack.cpp
src/CH_10/4_cornerSubPix/: CMakeLists.txt  cornerSubPix.cpp
src/new/: CMakeLists.txt
src/new/10_Shi-Tomasi/: 10_Shi-Tomasi角点检测.cpp  CMakeLists.txt
src/new/13_SRUF/: 13_SRUF特征点检测.cpp  CMakeLists.txt
src/new/14_LOG/: 14_LOG特征点检测.cpp  CMakeLists.txt
src/new/15_CamCali/: 15_张正友相机标定.cpp  CMakeLists.txt
src/new/16_TwoDimGamma/: 16_二维伽马函数图像校正.cpp  CMakeLists.txt
src/new/17_AHE/: 17_自适应校正.cpp  CMakeLists.txt
src/new/8_Harris/: 8_Harris角点检测.cpp  CMakeLists.txt
src/new/8_Harris2/: 8_Harris角点检测_API.cpp  CMakeLists.txt
src/new/9_Sobel/: 9_Sobel边缘检测.cpp  CMakeLists.txt
