cmake_minimum_required(VERSION 3.5)

project(opencv_ch1)

set( CMAKE_CXX_FLAGS "-std=c++11" )

set(CMAKE_CONFIGRATION_TYPES "Release" CACHE STRING "" FORCE)

add_subdirectory(CH1)
add_subdirectory(CH2)
add_subdirectory(CH3)
add_subdirectory(CH4)
add_subdirectory(CH5)
add_subdirectory(CH6)
add_subdirectory(CH7)
add_subdirectory(CH8)
add_subdirectory(CH9)
add_subdirectory(CH_10)