cmake_minimum_required(VERSION 3.5)

# 工程信息
project(OpenCVDemosCh5)

include_directories(${CMAKE_SOURCE_DIR}/..)

add_subdirectory(1_accessPixel)
add_subdirectory(2_accessPixel2)
add_subdirectory(3_accessPixel3)
add_subdirectory(4_accessPixeln)
add_subdirectory(5_blend)
add_subdirectory(6_blendMultichannel)
add_subdirectory(7_bright)
add_subdirectory(8_DFT)
add_subdirectory(9_xml)
