cmake_minimum_required(VERSION 3.5)

# 工程信息
project(OpenCVDemosCh6)

include_directories(${CMAKE_SOURCE_DIR}/..)

add_subdirectory(1_boxFilter)
add_subdirectory(2_blur)
add_subdirectory(3_gaussianBlur)
add_subdirectory(4_LinearFilter)
add_subdirectory(5_MedianBlur)
add_subdirectory(6_BilateralFilter)
add_subdirectory(7_ImageFilter)
add_subdirectory(8_Dilate)
add_subdirectory(9_Erode)
add_subdirectory(10_DilateErode)
add_subdirectory(11_DilationEX)
add_subdirectory(12_ErodeEX)
add_subdirectory(13_OpenEx)
add_subdirectory(14_ClosingEx)
add_subdirectory(15_GradientEX)
add_subdirectory(16_TopHatEX)
add_subdirectory(17_BlackHatEX)
add_subdirectory(18_MorphologyEX)
add_subdirectory(19_FloodFill)
add_subdirectory(20_FloodFill2)
add_subdirectory(21_resize)
add_subdirectory(22_pyrUp)
add_subdirectory(23_pyrDown)
add_subdirectory(24_PyrAndResize)
add_subdirectory(25_ThresHold)
